syntax = "proto3";

option csharp_namespace = "GrpcServiceApp";

import "google/api/annotations.proto";

package greet;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {
    option (google.api.http) = {
      get: "/v1/greeter/{name}"
    };
  }
  rpc RequestManyReplies (HelloRequest) returns (stream HelloReply) {
    option (google.api.http) = {
      get: "/v1/greeter/{name}/stream"
    };
  }
  rpc SendManyRequests (stream HelloRequest) returns (HelloReply);
  rpc InitiateBidirectionalStreaming (stream HelloRequest) returns (stream HelloReply);
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
  int32 message_id = 2;
  bytes content_in_bytes = 3;
  float message_size_in_kilobytes = 4;
  bool reply_processed = 5;
}
